<?xml version="1.0"?>
<package format="2">
  <name>kelo_tulip</name>
  <version>1.0.0</version>
  <description>KELO Tulip software</description>
  <author email="nowak@locomotec.com">walter</author>
  <maintainer email="nowak@locomotec.com">walter</maintainer>
  <license>internal</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
